Images copied to clipboard no longer contain transparency/alpha channel.
Categories
(Core :: Widget: Win32, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | wontfix |
| firefox66 | --- | fixed |
| firefox67 | --- | fixed |
People
(Reporter: bugzilla, Assigned: aosmond)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
|
456.45 KB,
image/png
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0
Steps to reproduce:
From this Reddit thread: https://www.reddit.com/r/firefox/comments/apl1he/firefox_v65_images_copied_to_clipboard_no_longer/ when viewing the image https://www.mariowiki.com/images/9/9c/Goomba_-_MarioPartyStarRush.png and then right-clicking on image and Copy Image and then pasting into Gimp for example, the alpha/transparency channel is lost.
I ran a moz-regression with the following results:
Using url: https://hg.mozilla.org/integration/mozilla-inbound/json-pushes?changeset=6c28ad7f98a7629f5a1b2f123aaad66f1f6233f0&full=1
2019-02-12T00:41:06: DEBUG : Found commit message:
Bug 1501482. r=tnikkel
Differential Revision: https://phabricator.services.mozilla.com/D11897
pushlog_url: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a424be1d8a667c799cbe4f337626591b1087f14d&tochange=6c28ad7f98a7629f5a1b2f123aaad66f1f6233f0
repo_name: mozilla-inbound
I do not have access to bug 1501482 to see what it is.
Actual results:
Alpha/Transparency channel is lost during copy operation.
Expected results:
It should have retained the alpha channel information.
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
| regression-window | ||
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:67.0) Gecko/20100101 Firefox/67.0
20190211215545
Thank you for the report. I'm surprised to see this has ever worked in GIMP when it doesn't work in other applications and bug 460969 has been open since 2008.
Yeah, I couldn't get Irfanview to see the Alpha no matter what I used (even copying from GIMP). Apparently GIMP can see something in the clipboard that Irfanview doesn't.
Comment 4•7 years ago
|
||
Andrew, can you take a look here since you worked on bug 1501482?
| Assignee | ||
Comment 5•7 years ago
|
||
Reviewing the code, I suspect we need to add the bpp option for the BMP encoder to ensure the alpha channel gets added.
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 6•7 years ago
|
||
I tried without the fix, missing the alpha channel, with the fix, has the alpha channel:
| Assignee | ||
Comment 7•7 years ago
|
||
In order to get the alpha channel when encoding BMP images from a
surface, we need to supply bmp=32 in the encoder options.
Comment 9•7 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 10•7 years ago
|
||
Has this been pushed to the latest Nightly yet? Still not working there.
Name Firefox
Version 67.0a1
Build ID 20190215162352
| Reporter | ||
Comment 11•7 years ago
|
||
Ok, Nightly just updated again and now it works, at least as far as Gimp seeing the Alpha channel.
Name Firefox
Version 67.0a1
Build ID 20190215184035
| Assignee | ||
Comment 12•7 years ago
|
||
(In reply to MarkRH from comment #11)
Ok, Nightly just updated again and now it works, at least as far as Gimp seeing the Alpha channel.
Name Firefox
Version 67.0a1
Build ID 20190215184035
Thanks for confirming. I'll request uplift.
| Assignee | ||
Comment 13•7 years ago
|
||
Comment on attachment 9043984 [details]
Bug 1527235 - Fix how the alpha channel was missing from pasted clipboard images.
Beta/Release Uplift Approval Request
Feature/Bug causing the regression
User impact if declined
Images with transparency that are pasted from the clipboard on Windows will lose it.
Is this code covered by automated tests?
Yes
Has the fix been verified in Nightly?
Yes
Needs manual test from QE?
No
If yes, steps to reproduce
List of other uplifts needed
None
Risk to taking this patch
Low
Why is the change risky/not risky? (and alternatives if risky)
I only changed the configuration of the BMP encoder to output BMPs in a form that supports alpha instead of the default which is without. The encoder itself has long supported encoding with/without alpha.
String changes made/needed
None
Comment 14•7 years ago
|
||
Comment on attachment 9043984 [details]
Bug 1527235 - Fix how the alpha channel was missing from pasted clipboard images.
Fix for recent regression (from 65), verified in Nightly.
OK to uplift for beta 8.
Comment 15•7 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 16•7 years ago
|
||
Just wanted to confirm that it now works for me in 66 beta 9 (did not in beta 8).
Comment 17•5 years ago
|
||
Seems to be back again: https://www.reddit.com/r/firefox/comments/mwmhu7/copied_pngs_have_a_black_background_instead_of/
Comment 18•5 years ago
|
||
Please file a new bug, and if you can get a regression range using https://mozilla.github.io/mozregression/ that would be great thanks. Please cc me.
Comment 19•5 years ago
|
||
Hello Timothy, sorry for the late response. I'm not sure if this is even worth creating a new bug for, since it seems that this is not a browser problem, but the image editor's. The reporter on Reddit says that this also occurs on Google Chrome.
Description
•