Bug 1527235 - Fix how the alpha channel was missing from pasted clipboard images. r=tnikkel, a=lizzard

In order to get the alpha channel when encoding BMP images from a
surface, we need to supply bmp=32 in the encoder options.

Differential Revision: https://phabricator.services.mozilla.com/D19835

--HG--
extra : source : 80e1aa2d745901c8825b9bb33402b087c1648218